<resources>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="arabic" translatable="false">Arabic</string>
    <string name="english" translatable="false">English</string>
    <string name="turkey" translatable="false">Turkey</string>
    <string name="enter_the_amount">Enter Value</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>

    <!-- Start  -->
    <string name="app_name">3omlati</string>
    <string name="welome_text">Services Provided By the application</string>
    <string name="next">Next</string>

    <!-- Home  -->

    <string name="title_home">Home</string>
    <string name="home">Home</string>
    <string name="currency">Currency</string>
    <string name="coins">Cryptocurrency</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="graph">Graph</string>

    <!-- Metal -->

    <string name="title_metal">Metal</string>
    <string name="metal">Metal</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="gold_price">Gold Prices</string>
    <string name="silver_price">Silver Prices</string>
    <string name="inside_turkey">Inside Turkey</string>
    <string name="outside_turkey">Outside Turkey</string>

    <!-- Fuel -->

    <string name="title_fuel">Fuel</string>
    <string name="fuel">Fuel</string>

    <!-- Currency Converter -->

    <string name="title_converter">Currency Converter</string>
    <string name="converter">Currency Converter</string>
    <string name="converter_toolbar">Converter</string>
    <string name="converter_currency">Converter Any Currency</string>

    <!-- Settings -->

    <string name="title_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="currency_settings">Choose preferred currencies</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="font_size">Font Size</string>
    <string name="language">Language</string>
    <string name="langauge_ar">Arabic</string>
    <string name="langauge_en">English</string>
    <string name="langauge_tr">Turkish</string>

    <!-- About us -->

    <string name="about_us">About us</string>

    <string name="connected">Connected</string>
    <string name="no_internet_connection">No internet connection!</string>

    <string name="loading">Please wait…</string>
    <string name="share_link_body">Download the app using this link: </string>
    <string name="copied">Copied to the Clipboard</string>
    <string name="push_notification">Enable general notifications</string>
    <string name="notifications">Notifications</string>
    <!---->
    <string name="TRY">Turkish Lira</string>
    <string name="EUR">Euro</string>
    <string name="SYP">Syrian Pound</string>
    <string name="LBP">Lebanese Pound</string>
    <string name="IQD">Iraqi Dinar</string>
    <string name="EGP"> Egyptian Pound</string>
    <string name="CHZ"> Chiliz</string>
    <string name="USDT">Tether</string>
    <string name="LTC">Litecoin</string>
    <string name="BNB">Binance Coin</string>
    <string name="XMR">Monero</string>
    <string name="DOGE">DogeCoin</string>
    <string name="ETH">Ethereum</string>
    <string name="BTG">Bitcoin Gold</string>
    <string name="BTC">Bitcoin</string>
    <string name="IRR">Iranian Rial</string>
    <string name="SDG">Sudanese Pound</string>
    <string name="LYD">Libyan Dinar</string>
    <string name="TND">Tunisian Dinar</string>
    <string name="DZD">Algerian Dinar</string>
    <string name="JOD">Jordanian Dinar</string>
    <string name="MAD">Moroccan Dirham</string>
    <string name="ILS">Shekel</string>
    <string name="YER">Yemeni Rial</string>
    <string name="OMR">Omani Rial</string>
    <string name="BHD">Bahraini Dinar</string>
    <string name="KWD">Kuwaiti Dinar</string>
    <string name="QAR">Qatari Rial</string>
    <string name="AED">United Arab Emirates Dirham</string>
    <string name="SAR">Saudi Riyal</string>
    <string name="PKR">Pakistani rupee</string>
    <string name="INR">Indian Ruble</string>
    <string name="JPY">Japanese Yen</string>
    <string name="CNY">Chinese Yen</string>
    <string name="AUD">Australian Dollar</string>
    <string name="CAD">Canadian Dollar</string>
    <string name="GBP">Sterling Pound</string>
    <string name="choose_the_currencies_you_want_to_receive_notification_for">Choose the currencies you want to receive notification for</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="the_result">The result</string>
    <string name="GD18">Gold gram 18</string>
    <string name="GD21">Gold gram 21</string>
    <string name="LR">Gold lira</string>
    <string name="ON">Gold ounce</string>
    <string name="KG">Kilo of gold</string>
    <string name="GT9">Gold gram 9</string>
    <string name="GT12">Gold gram 12</string>
    <string name="GT14">Gold gram 14</string>
    <string name="GT18">Gold gram 18</string>
    <string name="GT21">Gold gram 21</string>
    <string name="GT22">Gold gram 22</string>
    <string name="GT24">Gold gram 24</string>
    <string name="GTL">Gold lira</string>
    <string name="GTO">Gold ounce</string>
    <string name="GTK">Kilo of gold</string>
    <string name="SO">Silver ounce</string>
    <string name="SK">Kilo of silver</string>
    <string name="STO">Silver ounce</string>
    <string name="STK">Kilo of silver</string>
    <string name="OK95">octane 95</string>
    <string name="OK98">octane 98</string>
    <string name="DI">diesel</string>
    <string name="GZ">gaz</string>
    <string name="usd">American dollar</string>
    <string name="day">one day ago</string>
    <string name="days">%s days ago</string>
    <string name="hours">%s hours ago</string>
    <string name="hour">one hour ago</string>
    <string name="minut">a few minutes ago</string>
    <string name="minuts">%s minutes ago</string>
    <string name="second">a few seconds ago</string>
    <string name="ago">since</string>
    <string name="admob_opening" translatable="false">ca-app-pub-9950113071938253/3370309032</string>
    <string name="admob_initial" translatable="false">ca-app-pub-9950113071938253/1817554216</string>
    <string name="admob_native_ad_id" translatable="false">ca-app-pub-9950113071938253/3777503144</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-9950113071938253~8835029338</string>
<!--    <string name="admob_initial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="admob_native_ad_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>-->

    <string name="share_the_app">Share the App</string>
    <string name="about_us_txt">3omlati application displays the prices of currencies and cryptocurrencies globally It also displays the prices of gold and silver inside and outside Turkey besides the oil prices globally You can convert any amount of money from currency to currency </string>
    <string name="no_data">No updated prices today</string>
    <string name="updated">Currencies prices have been updated</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="all">All</string>
    <string name="channel_name" translatable="false">aomulati</string>
    <string name="channel_description" translatable="false">aomulati_desc</string>
    <string name="get_started">Get Started</string>
    <string name="continue_">Continue</string>
    <string name="done">Done</string>
    <string name="search_currencies_here">Search currencies here..</string>
    <string name="welcome_to_the">Welcome to the</string>
    <string name="premium_currency_platform">Premium\nCurrency Platform</string>
    <string name="currency_tracker">Currency Tracker</string>
    <string name="check_live_markets_rates_for_n100_currencies">Check live markets rates for\n100+ Currencies</string>
    <string name="stock_market">Stock Market</string>
    <string name="track_gold_oil_and_more_with_live_ntracking_mode">Track gold, oil and more with live\ntracking mode.</string>
    <string name="crypto_market">Crypto Market</string>
    <string name="bitcoin_doge_and_much_more_ncrypto_curriencies_tracker">Bitcoin, Doge and much more\ncrypto curriencies tracker</string>
    <string name="select_the_currency_you_want_to_follow_and_ntrack_and_click_the_icon_to_pin_the_ncurrency_you_want_to_show_first">Select the currency you want to follow and\ntrack, and click the icon to pin the \ncurrency you want to show first</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="currency_options">Currency Options</string>
    <string name="pinned_currencies">Pinned Currencies</string>
    <string name="copy_the_link_below_or_click_on_the_button_for_direct_sharing">Copy the link below or click on the button for direct sharing</string>
    <string name="app_link" translatable="false">https://play.google.com/store/apps/details?id=com.magma.aaomlati</string>
    <string name="select_currency_and_enter_amount">Select Currency and enter Amount</string>
    <string name="expired_token">Expired Token</string>


    <string-array name="dropdown_menu">
        <item>Inside Turkey</item>
        <item>Outside Turkey</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
        <item>Turkey</item>
    </string-array>

    <string-array name="font_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>


</resources>