<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_ellipse_left"
                android:layout_width="240dp"
                android:layout_height="222dp"
                android:src="@drawable/bg_ellipse_2"
                android:translationX="-150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_ellipse_right"
                android:layout_width="240dp"
                android:layout_height="222dp"
                android:src="@drawable/bg_ellipse_2"
                android:translationX="150dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_done"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_navigation_top"
                android:fontFamily="@font/product_sans_bold"
                android:gravity="center"
                android:text="@string/stock_market"
                android:textColor="@color/white"
                android:textSize="@dimen/size_toolbar_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_logo"
                android:layout_width="@dimen/image_product_create_size"
                android:layout_height="@dimen/image_product_create_size"
                android:layout_marginTop="@dimen/spacing_large"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

            <TextView
                android:id="@+id/txt_title_click_link"
                style="@style/MaterialTextViewSmallStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:gravity="center"
                android:text="@string/copy_the_link_below_or_click_on_the_button_for_direct_sharing"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lyt_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_medium"
                android:background="@drawable/bg_rounded"
                android:backgroundTint="@color/semi_blue"
                android:layout_marginTop="@dimen/spacing_default"
                android:layout_marginHorizontal="@dimen/spacing_large"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_click_link">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txt_link"
                    style="@style/MaterialEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:paddingVertical="@dimen/spacing_default"
                    android:paddingHorizontal="@dimen/spacing_default"
                    android:background="@drawable/bg_rounded"
                    android:backgroundTint="@color/semi_blue_1"
                    android:editable="false"
                    android:inputType="none"
                    android:maxLines="1"
                    android:text="@string/app_link"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/spacing_default"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_link"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share_app"
                style="@style/MaterialButtonBoldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/share_the_app"
                android:backgroundTint="@color/semi_blue"
                android:paddingVertical="@dimen/spacing_large"
                android:textSize="@dimen/size_big_title"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginHorizontal="@dimen/spacing_large"
                app:layout_constraintTop_toBottomOf="@+id/lyt_link"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_about_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_medium"
                android:textColor="@color/white"
                android:fontFamily="@font/product_sans_bold"
                android:gravity="center"
                android:padding="@dimen/spacing_default"
                android:background="@color/semi_blue"
                android:layout_marginTop="@dimen/vertical_20dp"
                android:text="@string/about_us"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_share_app" />

            <TextView
                android:id="@+id/txt_about_us"
                style="@style/MaterialTextViewSmallStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:gravity="center"
                android:text="@string/about_us_txt"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_about_us" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_done"
                style="@style/MaterialButtonBoldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:paddingVertical="@dimen/spacing_large"
                android:textSize="@dimen/size_big_title"
                android:layout_margin="@dimen/spacing_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_about_us"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>