<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.magma.aomlati.presentation.onboarding.OnBoardingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash_1">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="591dp"
            android:layout_height="350dp"
            android:src="@drawable/bg_ellipse_1"
            android:translationY="-120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:src="@drawable/bg_ellipse_2"
            android:translationX="40dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_title"
            app:layout_constraintStart_toEndOf="@+id/lyt_board"/>

        <FrameLayout
            android:id="@+id/lyt_board"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:id="@+id/img_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/vertical_20dp"
                android:padding="@dimen/spacing_large"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

        </FrameLayout>

        <TextView
            android:id="@+id/txt_title"
            style="@style/MaterialTextTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:text="@string/welcome_to_the"
            android:textColor="@color/white"
            android:textSize="@dimen/size_toolbar_title"
            app:layout_constraintBottom_toTopOf="@+id/txt_sub_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_board" />

        <TextView
            android:id="@+id/txt_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:paddingVertical="@dimen/spacing_large"
            android:text="@string/premium_currency_platform"
            android:textColor="@color/white"
            android:textSize="@dimen/size_header"
            android:fontFamily="@font/product_sans_bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_profile_top"
            android:minHeight="0dp"
            android:paddingVertical="@dimen/spacing_large"
            android:paddingHorizontal="@dimen/spacing_default"
            android:text="@string/get_started"
            app:icon="@drawable/ic_arrow_right_circle"
            app:iconGravity="textEnd"
            app:iconTint="@color/white"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="@dimen/size_title"
            android:textStyle="bold"
            app:cornerRadius="@dimen/vertical_10dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:iconPadding="@dimen/spacing_default"
            android:backgroundTint="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_sub_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>